--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "graphql": "^14.0.2",
     "lodash": "^4.17.11",
     "nodemon": "^1.18.9",
+    "pg": "^7.7.1",
+    "sequelize": "^4.42.0",
     "uuid": "^3.3.2"
   }
 }
