--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,17 @@
+// {
+//   "presets": ["env"],
+//   "plugins": ["transform-object-rest-spread"]
+// }
+
 {
-  "presets": ["env"],
-  "plugins": ["transform-object-rest-spread"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "current"
+        }
+      }
+    ]
+  ]
 }
